cleaning the data

--- a/task1_explore/1A_EDDA/eda_alicja.ipynb
+++ b/task1_explore/1A_EDDA/eda_alicja.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 189,
    "id": "ec1208ae",
    "metadata": {},
    "outputs": [],
@@ -38,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 190,
    "id": "4cf35b93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"../../dataset/ODI-2022.csv\", sep=\";\")"
+    "data = pd.read_csv(\"teacher_data/ODI-2022.csv\", sep=\";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 191,
    "id": "33bd9316",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "4                           Sunshine                          Good Food  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 192,
    "id": "588c9fbe",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
        "freq                                   14                                 11  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 193,
    "id": "371d6089",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "(304, 17)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 194,
    "id": "fe9298be",
    "metadata": {},
    "outputs": [],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 195,
    "id": "fd2d0089",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 196,
    "id": "9b2cefde",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 197,
    "id": "7d926b17",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 198,
    "id": "9a1460c4",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 199,
    "id": "6d50edcd",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 200,
    "id": "3a9b3b6d",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 201,
    "id": "6dc8b52b",
    "metadata": {},
    "outputs": [
@@ -897,7 +897,7 @@
        "4      2     100     86    07:20   Sunshine  Good Food  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 202,
    "id": "c0badf62",
    "metadata": {},
    "outputs": [],
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 203,
    "id": "c808611f",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 204,
    "id": "c0782ce4",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
        "       'More than the even share'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 205,
    "id": "c546dd5f",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "       'Fifty', '38', 'private matters', '62', '9', '666'], dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 206,
    "id": "ca331292",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1082,7 @@
        "       '123', '789458455584851844184'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 207,
    "id": "faa8b7b0",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "       'Im in the web', '12', 'Quattro', 'zero', '9'], dtype=object)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 208,
    "id": "36e87a6f",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1180,7 @@
        "       'Getting work done ', 'Highly productive ', '9', '-'], dtype=object)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 209,
    "id": "81fa9649",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1264,7 @@
        "       'Sleep more than 6 hours ', 'good mood'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,41 +1283,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "id": "ab8d3202",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# neighbors"
+    "# neighbors\n",
+    "data['neighbors'] = pd.to_numeric(data['neighbors'], errors='coerce').astype('Int64')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9e6e69b2",
+   "execution_count": 211,
+   "id": "c7c4e396",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(data['neighbors'].isna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "d527ab14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# random"
+    "data['neighbors'][data['neighbors']<0] = 0\n",
+    "data['neighbors'][data['neighbors']>600] = 600"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "14315edd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_data = data['neighbors'].dropna()\n",
+    "mean = int(np.mean(tmp_data))\n",
+    "\n",
+    "data['neighbors'] = data['neighbors'].fillna(mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "f847b594",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(data['neighbors'].isna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "9e6e69b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['888', '12', '9', '31', '86', '87', '6', '50', '42', '88', '1',\n",
+       "       '56', '7', '8', '420', '22', '17', '0', '800039995', '72', '27',\n",
+       "       '6.98', '11', '3.14', '32', '1278946', '651', '24', '2500', '-1',\n",
+       "       '1946', '36', '666', '765', '3', '81', '109', '4444', '94', '9999',\n",
+       "       '401', '19', '77', '69', '864687452', '280', '67', '2', '33',\n",
+       "       '8271', '4', '365', '5', '41', '73',\n",
+       "       '029384750928347509832475908347529803475982347598237459802374980572349805723489573298576893475983274598723498572349805738904759082345702345897349857',\n",
+       "       '980000000000000789', '432', '100', '10.3', '14', '3645',\n",
+       "       '987654321', 'Π', '227', '247', '57',\n",
+       "       '73553801531488322931570535984775796225797789', '94736253',\n",
+       "       '1947271047294720^10204847', '13', '97', '25', '567', '58', '23',\n",
+       "       '43', 'No', '21', '5813', '7823', '47', '76853', '7,66789E+13',\n",
+       "       '83', '60', 'omega', '10', '4.34', '68', '651893', '9462648',\n",
+       "       '521', '9664367943217790643378', '2230', '163', 'e', '18', '37',\n",
+       "       '56799', '55', '66',\n",
+       "       '54.727.163.638.182.600.000.000.000.000.000.000.000', '96274374',\n",
+       "       '78945', '7654321', '80', '198956654894562566469615', '5792',\n",
+       "       '172', '9,13747E+12', '11223344556677889900', '29', '361',\n",
+       "       '4729264827364547292736464629', 'sqrt(687458.9665)', '122',\n",
+       "       '6,96788E+14', '∞', '333', '34567', '6665437996',\n",
+       "       'dont tell me what to do', '83947', '53', '487', '47895734', '893',\n",
+       "       '99', '30', '548293748291457322680525896237', '235236236',\n",
+       "       '222.223', '626', '69420', '6969', '375', '007', '-34,67', '75',\n",
+       "       '123', '789458455584851844184'], dtype=object)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# random\n",
+    "data['random'].unique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ca0db438",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "61b08f42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# stress"
+    "# stress\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "72808a2b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# winning"
    ]
   },
@@ -1339,24 +1450,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "10ca7e84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# maybe nlp?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "f8de6b50",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# good day 1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ede013df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "598093bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# good day 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b54527a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1376,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "9f1e6d2b",
    "metadata": {},
    "outputs": [
@@ -1540,15 +1673,15 @@
        "3             0.0            NaN           0.0    male   neither    11/05/97   \n",
        "4             1.0            1.0           1.0    male       fat  03-10-1997   \n",
        "\n",
-       "  neighbors  standing stress winning random sleeping  good_day1  good_day2  \n",
-       "0         0       0.0      0       5    888    23:00     coffee        sun  \n",
-       "1         0       1.0    200       1     12       32       7777       8964  \n",
-       "2         1       0.0      0     100      9        x          0          0  \n",
-       "3         0       0.0     20     100     31    14:00  good food  no stress  \n",
-       "4         0       0.0      2     100     86    07:20   Sunshine  Good Food  "
+       "   neighbors  standing stress winning random sleeping  good_day1  good_day2  \n",
+       "0          0       0.0      0       5    888    23:00     coffee        sun  \n",
+       "1          0       1.0    200       1     12       32       7777       8964  \n",
+       "2          1       0.0      0     100      9        x          0          0  \n",
+       "3          0       0.0     20     100     31    14:00  good food  no stress  \n",
+       "4          0       0.0      2     100     86    07:20   Sunshine  Good Food  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "deea5c43",
    "metadata": {},
    "outputs": [
@@ -1597,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "9c11010e",
    "metadata": {},
    "outputs": [
@@ -1627,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "6dcd781b",
    "metadata": {},
    "outputs": [
@@ -1657,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "3b57d9b5",
    "metadata": {},
    "outputs": [
@@ -1667,7 +1800,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1698,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "6d3e9431",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1841,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
