--- a/task3_research/sms_dataset.ipynb
+++ b/task3_research/sms_dataset.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eecb5c20",
+   "id": "868e4aaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,38 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1d8697cc",
+   "id": "d45e8124",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"SmsCollection.csv\", sep='\\t')"
+    "data = pd.read_csv(\"SmsCollection.csv\", sep='\\t')\n",
+    "new_data = pd.DataFrame(data['label;text'].str.split(';', 1))\n",
+    "new_data['modified'] = new_data['label;text'].apply(lambda x: ','.join(x))\n",
+    "new_data[['label', 'text']] = new_data['modified'].str.split(',', 1, expand=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "73da353a",
+   "execution_count": 48,
+   "id": "ab505a00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "643fc56c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_data = new_data[['label', 'text']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "70fe9277",
    "metadata": {},
    "outputs": [
     {
@@ -47,172 +68,483 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>label;text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ham;Go until jurong point, crazy.. Available o...</td>\n",
+       "      <td>ham</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ham;Ok lar... Joking wif u oni...</td>\n",
+       "      <td>ham</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>spam;Free entry in 2 a wkly comp to win FA Cup...</td>\n",
+       "      <td>spam</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ham;U dun say so early hor... U c already then...</td>\n",
+       "      <td>ham</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ham;Nah I don't think he goes to usf, he lives...</td>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                          label;text\n",
-       "0  ham;Go until jurong point, crazy.. Available o...\n",
-       "1                  ham;Ok lar... Joking wif u oni...\n",
-       "2  spam;Free entry in 2 a wkly comp to win FA Cup...\n",
-       "3  ham;U dun say so early hor... U c already then...\n",
-       "4  ham;Nah I don't think he goes to usf, he lives..."
+       "  label                                               text\n",
+       "0   ham  Go until jurong point, crazy.. Available only ...\n",
+       "1   ham                      Ok lar... Joking wif u oni...\n",
+       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
+       "3   ham  U dun say so early hor... U c already then say...\n",
+       "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 20,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "009b8876",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_data = pd.DataFrame(data['label;text'].str.split(';', 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "b9588d69",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label;text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[ham, Go until jurong point, crazy.. Available...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[ham, Ok lar... Joking wif u oni...]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[spam, Free entry in 2 a wkly comp to win FA C...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[ham, U dun say so early hor... U c already th...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[ham, Nah I don't think he goes to usf, he liv...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5569</th>\n",
-       "      <td>[spam, This is the 2nd time we have tried 2 co...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5570</th>\n",
-       "      <td>[ham, Will ü b going to esplanade fr home?]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5571</th>\n",
-       "      <td>[ham, Pity, * was in mood for that. So...any o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5572</th>\n",
-       "      <td>[ham, The guy did some bitching but I acted li...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5573</th>\n",
-       "      <td>[ham, Rofl. Its true to its name]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5574 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             label;text\n",
-       "0     [ham, Go until jurong point, crazy.. Available...\n",
-       "1                  [ham, Ok lar... Joking wif u oni...]\n",
-       "2     [spam, Free entry in 2 a wkly comp to win FA C...\n",
-       "3     [ham, U dun say so early hor... U c already th...\n",
-       "4     [ham, Nah I don't think he goes to usf, he liv...\n",
-       "...                                                 ...\n",
-       "5569  [spam, This is the 2nd time we have tried 2 co...\n",
-       "5570        [ham, Will ü b going to esplanade fr home?]\n",
-       "5571  [ham, Pity, * was in mood for that. So...any o...\n",
-       "5572  [ham, The guy did some bitching but I acted li...\n",
-       "5573                  [ham, Rofl. Its true to its name]\n",
-       "\n",
-       "[5574 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_data"
+    "final_data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62bd9c60",
+   "id": "16bdd012",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dfa55f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "065594ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d5730b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "aed8ab4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "36cbae01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_true = [1, 1, 2, 7]\n",
+    "y_pred = [2, 2, 3, 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "cf6a117d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "9a2cda08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1dd05fd",
+   "metadata": {},
+   "source": [
+    "##  Run an experiment on any dataset obtained from the web, measure MSE and MAE "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "944af234",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cars = pd.read_csv(\"cars.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "03e079c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(205, 26)"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "254685eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>car_ID</th>\n",
+       "      <th>symboling</th>\n",
+       "      <th>CarName</th>\n",
+       "      <th>fueltype</th>\n",
+       "      <th>aspiration</th>\n",
+       "      <th>doornumber</th>\n",
+       "      <th>carbody</th>\n",
+       "      <th>drivewheel</th>\n",
+       "      <th>enginelocation</th>\n",
+       "      <th>wheelbase</th>\n",
+       "      <th>...</th>\n",
+       "      <th>enginesize</th>\n",
+       "      <th>fuelsystem</th>\n",
+       "      <th>boreratio</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>compressionratio</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>peakrpm</th>\n",
+       "      <th>citympg</th>\n",
+       "      <th>highwaympg</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>alfa-romero giulia</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>130</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>13495.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>alfa-romero stelvio</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>130</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>16500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>alfa-romero Quadrifoglio</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>hatchback</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>152</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>154</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>19</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>audi 100 ls</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>fwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>99.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>109</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>13950.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>audi 100ls</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>4wd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>99.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>136</td>\n",
+       "      <td>mpfi</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>115</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17450.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   car_ID  symboling                   CarName fueltype aspiration doornumber  \\\n",
+       "0       1          3        alfa-romero giulia      gas        std        two   \n",
+       "1       2          3       alfa-romero stelvio      gas        std        two   \n",
+       "2       3          1  alfa-romero Quadrifoglio      gas        std        two   \n",
+       "3       4          2               audi 100 ls      gas        std       four   \n",
+       "4       5          2                audi 100ls      gas        std       four   \n",
+       "\n",
+       "       carbody drivewheel enginelocation  wheelbase  ...  enginesize  \\\n",
+       "0  convertible        rwd          front       88.6  ...         130   \n",
+       "1  convertible        rwd          front       88.6  ...         130   \n",
+       "2    hatchback        rwd          front       94.5  ...         152   \n",
+       "3        sedan        fwd          front       99.8  ...         109   \n",
+       "4        sedan        4wd          front       99.4  ...         136   \n",
+       "\n",
+       "   fuelsystem  boreratio  stroke compressionratio horsepower  peakrpm citympg  \\\n",
+       "0        mpfi       3.47    2.68              9.0        111     5000      21   \n",
+       "1        mpfi       3.47    2.68              9.0        111     5000      21   \n",
+       "2        mpfi       2.68    3.47              9.0        154     5000      19   \n",
+       "3        mpfi       3.19    3.40             10.0        102     5500      24   \n",
+       "4        mpfi       3.19    3.40              8.0        115     5500      18   \n",
+       "\n",
+       "   highwaympg    price  \n",
+       "0          27  13495.0  \n",
+       "1          27  16500.0  \n",
+       "2          26  16500.0  \n",
+       "3          30  13950.0  \n",
+       "4          22  17450.0  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cars.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "d2ec67b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['car_ID',\n",
+       " 'symboling',\n",
+       " 'CarName',\n",
+       " 'fueltype',\n",
+       " 'aspiration',\n",
+       " 'doornumber',\n",
+       " 'carbody',\n",
+       " 'drivewheel',\n",
+       " 'enginelocation',\n",
+       " 'wheelbase',\n",
+       " 'carlength',\n",
+       " 'carwidth',\n",
+       " 'carheight',\n",
+       " 'curbweight',\n",
+       " 'enginetype',\n",
+       " 'cylindernumber',\n",
+       " 'enginesize',\n",
+       " 'fuelsystem',\n",
+       " 'boreratio',\n",
+       " 'stroke',\n",
+       " 'compressionratio',\n",
+       " 'horsepower',\n",
+       " 'peakrpm',\n",
+       " 'citympg',\n",
+       " 'highwaympg',\n",
+       " 'price']"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(cars.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5f71761",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cd29e67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94734725",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b9f07b3",
    "metadata": {},
    "outputs": [],
    "source": []
