updating Task 2 notebook

--- a/task2_titanic/Task_2.ipynb
+++ b/task2_titanic/Task_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ac686d88",
+   "id": "02739deb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "80095cf0",
+   "id": "5c5078da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ce8d445d",
+   "id": "2860bae3",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3ed35401",
+   "id": "81b3de78",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b585e4f5",
+   "id": "8dce216b",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "36b06974",
+   "id": "00a684a1",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9d8752e1",
+   "id": "1acaf9c0",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c09b9929",
+   "id": "0c778799",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b071fcee",
+   "id": "9cf8c05f",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb76565",
+   "id": "06ca0afb",
    "metadata": {},
    "source": [
     "### Features that could contribute to a high survival rate\n",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0d98ceca",
+   "id": "e5c59dee",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dad37f33",
+   "id": "6adf1d0b",
    "metadata": {},
    "source": [
     "Around 62% of 1st class passengers survived compared to 47% and 24% for 2nd and 3rd class passengers respectively"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ee4a5931",
+   "id": "ac26800b",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9681291f",
+   "id": "0f9185f8",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fdf0162",
+   "id": "25f346c1",
    "metadata": {},
    "source": [
     "Almost 75% of feamles survived, compared to 19% for males "
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4276ee3e",
+   "id": "54393d3e",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d05b251a",
+   "id": "7e4961a7",
    "metadata": {},
    "source": [
     "## Cleaning Data"
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e35968f6",
+   "id": "78570959",
    "metadata": {},
    "source": [
     "#### Converting categorical data into numerical"
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "546a464a",
+   "id": "fa8529be",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f280c654",
+   "id": "63e45876",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "aa2effb1",
+   "id": "d39e80d3",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "74a60bfa",
+   "id": "e1654f90",
    "metadata": {},
    "outputs": [
     {
@@ -1087,11 +1087,11 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "97b881e6",
+   "id": "45a99e4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Doing the same for data, replacing missing values for age\n",
+    "# Doing the same for test data, replacing missing values for age\n",
     "# mean and std of Age\n",
     "test_mean_age = test_data['Age'].mean() #30.272590361445783 = 30.3\n",
     "test_std_age = test_data['Age'].std() #14.18120923562442 = 14.2\n",
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "afa16ee9",
+   "id": "7256da62",
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "fd7adcd0",
+   "id": "20e601a9",
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "510e6d96",
+   "id": "24084a6d",
    "metadata": {},
    "source": [
     "#### Replacing missing categorical data for 'Embarked'"
@@ -1293,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "173fb51f",
+   "id": "8abe833d",
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3dbd197e",
+   "id": "1b5020da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "95200524",
+   "id": "c39bb0c6",
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a722628",
+   "id": "6325edd3",
    "metadata": {},
    "source": [
     "About 55% of passengers that used the port C = Cherbourg survived compared to 39% for Q = Queenstown, and 34% for S = Southampton"
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ea8af403",
+   "id": "84150631",
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ef62ed00",
+   "id": "c398069d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "cb226100",
+   "id": "7ed65b1c",
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d44fd7eb",
+   "id": "3333ce24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1608,8 +1608,10 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "12efcd4c",
-   "metadata": {},
+   "id": "9e2c91b1",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1761,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "85b52ede",
+   "id": "f9c8bbf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8279f9aa",
+   "id": "b4db547d",
    "metadata": {},
    "outputs": [
     {
@@ -1927,7 +1929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cd73fd4",
+   "id": "b54fbc1d",
    "metadata": {},
    "source": [
     "#### Dropping columns with mixed data types and missing values, which do not seem to affect survival rate significantly"
@@ -1936,7 +1938,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "169f7b55",
+   "id": "5fe20c57",
    "metadata": {},
    "outputs": [
     {
@@ -1972,7 +1974,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "cc47cc4b",
+   "id": "b08c00aa",
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2095,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b554b7c4",
+   "id": "622b9aa7",
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2210,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "11d96e59",
+   "id": "9507534c",
    "metadata": {},
    "outputs": [
     {
@@ -2243,7 +2245,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "4873d6c1",
+   "id": "7f147007",
    "metadata": {},
    "outputs": [
     {
@@ -2269,7 +2271,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "397f91fc",
+   "id": "64190f45",
    "metadata": {},
    "outputs": [
     {
@@ -2315,7 +2317,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "c9be2716",
+   "id": "4576b17f",
    "metadata": {},
    "outputs": [
     {
@@ -2347,7 +2349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7189de92",
+   "id": "99a2229a",
    "metadata": {},
    "source": [
     "### Prediction Models"
@@ -2356,7 +2358,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "144f05f0",
+   "id": "de57818f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2368,7 +2370,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "b26ba488",
+   "id": "52cf4489",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2377,7 +2379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c72978cb",
+   "id": "62dafa01",
    "metadata": {},
    "source": [
     "#### Logistic Regression\n",
@@ -2388,7 +2390,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "501f38bd",
+   "id": "f173b50d",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80e5d816",
+   "id": "ca1eb71f",
    "metadata": {},
    "source": [
     "#### Decision Tree\n",
@@ -2437,7 +2439,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "3beb5a03",
+   "id": "cabd96e7",
    "metadata": {},
    "outputs": [
     {
@@ -2461,7 +2463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74be3603",
+   "id": "5c514439",
    "metadata": {},
    "source": [
     "#### Random Forest\n",
@@ -2472,7 +2474,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "f5c3d92e",
+   "id": "5bf7590c",
    "metadata": {},
    "outputs": [
     {
@@ -2497,7 +2499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f60658d7",
+   "id": "ac630517",
    "metadata": {},
    "source": [
     "#### K-Nearest Neighbor\n",
@@ -2508,7 +2510,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "670c7d90",
+   "id": "3f13e7e8",
    "metadata": {},
    "outputs": [
     {
@@ -2531,8 +2533,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "f22deca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Y_pred"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "c09e96bf",
+   "id": "e535d96c",
    "metadata": {},
    "source": [
     "#### Model evalution"
@@ -2540,8 +2552,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "0d4937ec",
+   "execution_count": 85,
+   "id": "6ac36d6d",
    "metadata": {},
    "outputs": [
     {
@@ -2602,7 +2614,7 @@
        "1  Logistic Regression  80.36"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2616,11 +2628,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5d92b032",
+   "execution_count": 82,
+   "id": "62564828",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import KFold, StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af463e18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scores = cross_val_score(model, X, y, scoring='accuracy', n_jobs=-1)\n",
+    "# X = features.loc[:, features.columns != 'label']\n",
+    "# y = features['label']\n",
+    "\n",
+    "# scores = cross_val_score(model, X_train, y_train, cv=10, scoring='accuracy')\n",
+    "# scores\n"
+   ]
   }
  ],
  "metadata": {
